# HexCrypt

./: .gitignore  README.md  app.py  core.py  migrate.py  mise.toml  requirements.txt  test_cli.py
.github/workflows/: test.yml
core/: pyproject.toml
core/hexcrypt_core/: steg.py
hexcrypt/: __init__.py  app.py  cli.py  core.py  keystore.py  steg.py
tool/: pyproject.toml  requirements.txt
tool/hexcrypt/: api.py  app.py  cli.py
web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
web/src/: App.jsx  index.css
