[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hexcrypt-tool"
version = "2.0.0"
authors = [
  { name="rootwithkhandal", email="user@example.com" },
]
description = "A powerful AES-256-GCM / X25519 desktop encryption tool with Steganography."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "hexcrypt-core",
    "argcomplete>=3.0.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "pydantic",
    "python-multipart"
]

[project.scripts]
hexcrypt = "hexcrypt.cli:main"

[tool.setuptools.packages.find]
include = ["hexcrypt*"]
